--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
         </div>
         <script>
-            const apiKey = "954bc9050fab3b4b320576f298c8f018"
+            const apiKey = "################"
             const apiUrl = "https://api.openweathermap.org/data/2.5/weather?units=metric&q=";
             const searchBox = document.querySelector(".search input");
             const searchBtn = document.querySelector(".search input");
